--- a/employees/static/css/main.css
+++ b/employees/static/css/main.css
@@ -2,26 +2,15 @@
 .alert {
   margin: 10px 0 5px 0;
 }
-h1, h2, h3, h4, h5, h6 {
+h1, h2 {
   font-weight: bold;
 }
-
-/* Groups Selector */
-#group-selector {
-  margin-top: 30px;
+.container{ width:95%; }
+.align-left{
+    float: left;
+    width: 50%;
 }
-#group-selector select {
-  width: 80%;
-  margin: 0;
-  background-color: #ffffff;
-  border: 1px solid #cccccc;
-  height: 30px;
-  line-height: 30px;
-  color: #555555;
-}
-
-/* Footer Styles */
-#footer {
-  border-top: 1px solid #dddddd;
-  padding-top: 10px;
+.align-right{
+    float: right;
+     width: 20%;
 }
