--- a/employees/templates/emp_edit.html
+++ b/employees/templates/emp_edit.html
@@ -11,8 +11,8 @@
 
     {{ form.as_p }}
 
-    <input type="submit" value="Зберегти" name="add_button" class="btn btn-primary" />
-    <button type="submit" name="cancel_button" value="Скасувати" class="btn btn-link">Скасувати</button>
+    <input type="submit" value="Save" name="add_button" class="btn btn-primary" />
+    <button type="submit" name="cancel_button" value="Cancel" class="btn btn-link">Cancel</button>
 
 </form>
 
