--- a/employees/static/css/main.css
+++ b/employees/static/css/main.css
@@ -5,12 +5,16 @@
 h1, h2 {
   font-weight: bold;
 }
-.container{ width:95%; }
+.container{ width:100%; }
 .align-left{
     float: left;
     width: 50%;
 }
+.align-center{
+    float: center;
+    width: 50%;
+}
 .align-right{
     float: right;
-     width: 20%;
+     width: 50%;
 }
