--- a/employees/templates/emp_edit.html
+++ b/employees/templates/emp_edit.html
@@ -12,7 +12,7 @@
     {{ form.as_p }}
 
     <input type="submit" value="Save" name="add_button" class="btn btn-primary" />
-    <button type="submit" name="cancel_button" value="Cancel" class="btn btn-link">Cancel</button>
+    <button type="submit" name="cancel_button" value="Cancel" class="btn btn-link" formnovalidate>Cancel</button>
 
 </form>
 
